Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15660

QPainter draw wrong bezier curve when Antialiasing is enabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.2
    • 4.7.1
    • GUI: Painting
    • None
    • windows 7 x64
      visual studio 2010
    • eb2bd43078c1bb43481aab795f92e105fa130860, 07b3a1c3d38d5870009e76de6315a9025e8f7915

    Description

      QPainter (raster engine) will draw a staight line instead of a bezier curve in some circumstances when Antialiasing is enabled. If I turn off Antialiasing QPainter will draw the bezier curve correctly. The attached program will show this.
      this bug affect Qt 4.7.1 and the code I grab from git repository today also has this bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            jianliang79 liang jian
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes