Fixed cubic bezier rendering bug in qgrayraster.

Use the y coordinates to compute the y delta... This could cause
too fine (or too coarse) subdivision of cubic bezier curves, so
potentially both performance problems and visual artifacts.

Task-number: QTBUG-15660
Reviewed-by: Andreas Kling